deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs
  namespace: default
  labels:
    app: nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodejs
        image: 891376985437.dkr.ecr.ap-south-1.amazonaws.com/node:latest
        ports:
        - containerPort: 3000
