service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: nodejs
